# yarch02

./: Project_template.md  docker-compose.yml
.github/workflows/: api-tests.yml  docker-build-push.yml
build_docker/cpp_builder/: Dockerfile  conanfile.txt  conanprofile.txt
docs/c4/: containers.puml
src/kubernetes/: circuit-breaker-config.yaml  dockerconfigsecret.yaml  events-service.yaml  monolith.yaml  movies-service.yaml  proxy-service.yaml
src/kubernetes/helm/: values.yaml
src/kubernetes/helm/templates/services/: events-service.yaml  proxy-service.yaml
src/microservices/events/: CMakeLists.txt  Dockerfile  conanfile.txt
src/microservices/events/include/events/: consumer.h  producer.h  service.h
src/microservices/events/src/: consumer.cc  main.cc  producer.cc  service.cc
src/microservices/proxy/: .gitignore  CMakeLists.txt  Dockerfile  conanfile.txt
src/microservices/proxy/include/proxy/: migration_setutp.h  router.h
src/microservices/proxy/src/: forwarder.cc  forwarder.h  main.cc  router.cc
src/microservices/proxy/tests/: router.cc
